--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "d3-shape": "^1.2.0",
     "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.10",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
     "@vue/cli-service": "^3.0.0-rc.10",
+    "@vx/curve": "^0.0.165",
+    "@vx/mock-data": "0.0.165",
+    "@vx/scale": "0.0.165",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
