--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "d3-hierarchy": "^1.1.6",
     "d3-shape": "^1.2.0",
+    "d3-voronoi": "^1.1.2",
     "vue": "^2.5.16"
   },
   "devDependencies": {
