--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "d3-chord": "^1.0.4",
     "d3-hierarchy": "^1.1.6",
     "d3-shape": "^1.2.0",
     "d3-voronoi": "^1.1.2",
