--- a/packages/vx-chord/package.json
+++ b/packages/vx-chord/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-vx/chord",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "vue-vx chord",
   "sideEffects": false,
   "main": "src/index.js",
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/jens-ox/vue-vx#readme",
   "dependencies": {
-    "@vue-vx/group": "^0.1.0",
+    "@vue-vx/group": "^0.1.1",
     "vue": "^2.5.16"
   },
   "devDependencies": {
@@ -63,5 +63,6 @@
   ],
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "be8cbfbe14be6709060aa9e9e4f64cd7c3f24747"
 }
