--- a/packages/vx-scale/package.json
+++ b/packages/vx-scale/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-vx/scale",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "vue-vx scale",
   "sideEffects": false,
   "main": "src/index.js",
@@ -62,5 +62,6 @@
   ],
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "be8cbfbe14be6709060aa9e9e4f64cd7c3f24747"
 }
