--- a/packages/vx-mock-data/package.json
+++ b/packages/vx-mock-data/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@vue-vx/mock-data",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "vue-vx mock-data",
   "sideEffects": false,
-  "main": "src/main.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "vue-cli-service build --target lib --name mock-data ./src/index.js"
   },
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/jens-ox/vue-vx#readme",
   "dependencies": {
+    "@vx/mock-data": "0.0.165",
     "vue": "^2.5.16"
   },
   "devDependencies": {
@@ -63,5 +64,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "ef30b570f2ff8823e5bedaf2eeb757aa225bbd68"
+  "gitHead": "56999d684816b409302f24b61399a9bb61932766"
 }
