--- a/packages/vx-axis/package.json
+++ b/packages/vx-axis/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/jens-ox/vue-vx#readme",
   "dependencies": {
-    "@vue-vx/group": "0.0.170",
+    "@vue-vx/group": "^0.2.0",
     "@vue-vx/point": "^0.2.0",
     "@vue-vx/shape": "^0.2.0"
   },
