--- a/packages/vx-grid/package.json
+++ b/packages/vx-grid/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/jens-ox/vue-vx#readme",
   "dependencies": {
+    "@vue-vx/point": "^0.2.0",
+    "@vue-vx/shape": "^0.2.0",
     "vue": "^2.5.16"
   },
   "devDependencies": {
